# Android_Native_Surface

./: .gitignore  CMakeLists.txt  Chinese.md  LICENSE  README.md
aosp_res/10/aosp_native_surface/: aosp-native-surface.includes
aosp_res/10/aosp_native_surface/src/: aosp_record.cpp  aosp_surface.cpp
aosp_res/11/aosp_native_surface/: Android.bp
aosp_res/11/aosp_native_surface/src/: aosp_record.cpp  aosp_surface.cpp
aosp_res/12/aosp_native_surface/: Android.bp
aosp_res/12/aosp_native_surface/src/: aosp_record.cpp  aosp_surface.cpp
aosp_res/12/aosp_native_surface/src/include/: aosp_record.h
aosp_res/13/aosp_native_surface/src/: aosp_record.cpp
aosp_res/13/aosp_native_surface/src/include/: aosp_record.h  aosp_surface.h
aosp_res/9/aosp_native_surface/: Android.bp
aosp_res/9/aosp_native_surface/src/: aosp_record.cpp  aosp_surface.cpp
ffmpeg/include/libavutil/: ffversion.h
include/: main.h
include/Android_draw/: draw.h
include/Android_shm/: shm_open_anon.h
include/Android_touch/: touch.h  touchInput.h
include/ImGui/: imgui.h  imgui_internal.h
include/ImGui/backends/: imgui_impl_android.h
include/native_surface/: extern_function.h  native_surface.h  utils.h
include/native_surface/aosp/: dev.h  native_surface_10.h  native_surface_11.h  native_surface_12.h  native_surface_12_1.h  native_surface_13.h  native_surface_9.h
include/native_surface/aosp_10/: native_surface_10.h
include/native_surface/aosp_11/: native_surface_11.h
include/native_surface/aosp_12/: native_surface_12.h
include/opencv2/: opencv_modules.hpp
include/tools/: ByteUtil.h  ByteUtils.h  DataDec.h  DataEnc.h  H264Decoder.h  ImageTexture.h  ImageViewer.h  SocketBase.h  TCPClient.h  TCPServer.h  TimeTools.h  Type.h  main.h
my_android_opencv/: CMakeLists.txt
my_android_opencv/modules/core/src/: logger.cpp
my_android_opencv/modules/highgui/src/: window_imgui.cpp
my_libhv/: CMakeLists.txt
outputs/arm64-v8a/: NativeSurface
res/aosp_native_surface/: Android.bp  README.md  aosp-native-surface.config
res/aosp_native_surface/src/: aosp_surface.cpp  aosp_surface.h
src/: hv.cpp  main.cpp  opencv.cpp  recordReceive.cpp  screenRecord.cpp  surface.cpp
src/Android_draw/: draw.cpp
src/Android_shm/: shm_open_anon.cpp
src/Android_touch/: touch.cpp
src/ImGui/: imgui_widgets.cpp
src/ImGui/backends/: imgui_impl_android.cpp  imgui_impl_opengl3.cpp
src/native_surface/: native_surface.cpp  utils.cpp
src/source/Android_draw/: draw.cpp
src/source/Android_shm/: shm_open_anon.cpp
src/source/Android_touch/: touch.cpp
src/source/ImGui/: imgui.cpp  imgui_draw.cpp
src/source/ImGui/backends/: imgui_impl_android.cpp  imgui_impl_opengl3.cpp
src/source/native_surface/: extern_function.cpp  utils.cpp
src/source/tools/: ByteUtils.cpp  DataDec.cpp  DataEnc.cpp  H264Decode.cpp  ImageTexture.cpp  ImageViewer.cpp  TCPClient.cpp  TCPServer.cpp  TimeTools.cpp
